<resources>
    <string name="app_name">Taxi</string>
    <string name="app_version">Version 1.0</string>
    <string name="phone_number">Phone number(*)</string>
    <string name="user_name">User name</string>
    <string name="email">Email</string>
    <string name="referral_code">Referral code</string>
    <string name="terms_and_conditions">I agree to Terms &amp; Conditions</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="english">English</string>
    <string name="register">Register</string>
    <string name="has_the_activation_code">HAS THE ACTIVATION CODE</string>
    <string name="error_phone_number">Your phone number is invalid, please check it again!</string>
    <string name="error_user_name">User name is invalid, please check it again!</string>
    <string name="error_email">Your email is invalid, please check it again!</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="verification_code">Verification code</string>
    <string name="enter_verification_code_mess">A verification code has been sent to your number.</string>
    <string name="confirm">Confirm</string>
    <string name="re_send_sms">Re-send SMS after: </string>
    <string name="phone_number_is_required">Phone number is required.</string>
    <string name="err_mess_has_actiovation_code">Your phone number has been changed, please use Register function.</string>
    <string name="user_profile">User Profile</string>
    <string name="taxi_booking">Taxi Booking</string>
    <string name="history">History</string>
    <string name="promotion">Promotion</string>
    <string name="helps">Helps</string>
    <string name="feedback">Feedback</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="feedback_mess">We are looking forward to your feedback</string>
    <string name="title">Title</string>
    <string name="feedback_content">Content(*)</string>
    <string name="send_feedback">Send</string>
    <string name="hotline">Hotline</string>
    <string name="send_feedback_result">Your feedback has been sent. Thank you!</string>
    <string name="promotion_news_mess">No available promotion!</string>
    <string name="promotion_code_mess">You do not have any promo code!</string>
    <string name="promotion_code">Promotion</string>
    <string name="promotion_news">News</string>
    <string name="copyright">\u00a9 2017 Copyright by Chi Pheo Taxi</string>
    <string name="content_about_us">Taxi là ứng dụng đặt Taxi trực tuyến của hãng Chí Phèo Taxi, chỉ cần một vài thao tác đơn giản để gọi một chiếc Taxi và có thể trực tiếp theo dõi quá trình chiếc Taxi đến đón bạn trên màn hình ứng dụng. Phần mềm sử dụng trên hệ điều hành iOS và Android được phát triển bởi Chí Phèo Taxi.\n\nChí Phèo Taxi là đơn vị vận tải hàng đầu trong lĩnh vực vận chuyển khách bằng Taxi tại Thủ đô Hà Nội với hơn 1000 xe và đội ngũ lái xe được đào tạo bài bản, chuyên nghiệp. Chí Phèo Taxi cam kết sẽ mang đến cho Quý khách hàng những dịch vụ hoàn hảo: tiện ích, nhanh chóng, an toàn và giá cước cạnh tranh.\n\nChí Phèo Taxi hân hạnh được phục vụ quý khách!</string>
    <string name="rate_app">Rate app</string>
    <string name="share">Share</string>
    <string name="help_booking_instruction">Taxi booking instruction</string>
    <string name="help_cancel_booking">Cancel your schedule booking</string>
    <string name="history_mess">No taxi schedule recorded</string>
    <string name="dismiss">Dismiss</string>
    <string name="help_reminder">- In case you have a schedule booking, app will display \"Schedule booking\" on the menu until it\'s expired or cancelled.\n\n- To cancel your booking, go to \"History\" function.</string>
    <string name="help_your_schedule_booking">- A valid schedule booking will be placed on top on the list, with a blue \"Schedule\" status.\n\n- Select it to view details.</string>
    <string name="help_cancel_schedule_booking">- Your booking information will be displayed.\n\n- You can cancel your booking by touch on \"Cancel\" button.</string>
    <string name="reminder">Reminder</string>
    <string name="your_schedule_booking">You schedule booking</string>
    <string name="cancel_schedule_booking">Cancel schedule booking</string>
    <string name="car_type_selection">Car tye selection</string>
    <string name="help_car_type_selection">- You can change to another car type by touch on its icon. Selected car type will be highlighted.\n\n- In order to switch between \"City\" and \"Airport\" car type, simply touch on it or swipe left or right.</string>
    <string name="choose_pickup_drop_off_point">Choose pick-up, drop-off point</string>
    <string name="help_choose_pickup_drop_off_point">- Move the center point to your desired pick-up point. Then, touch on it to confirm. You can also change it by touch on its marker on the map.\n\n- Or you can use the search function by touch on the address frame.</string>
    <string name="booking_confirmation">Booking Confirmation</string>
    <string name="help_booking_confirmation">- Your booking confirmation will be presented on the screen. You can also:\n\n  + Change your booking time.\n\n  + Add promo code, if available.\n\n  + Send a addition note to your driver.\n\n- Finally, press \"Book\" to send your books to Taxi\'s system.</string>
    <string name="driver_information">Driver\'s information</string>
    <string name="help_driver_information">- Taxi will dispatch a driver that satisfy your request.\n\n- Your driver\'s information will be visible on screen. You can call him/her directly.\n\n- Your driver\'s location will be updated continuously. You can catch your taxi proactively.</string>
    <string name="finish_booking">Finish booking</string>
    <string name="help_finish_booking">- After get on your taxi, please press \"Get on taxi\" to let the driver knows that he/she get right person.\n\n- Finally, press \"Finish\" to give your rating and feedback for this driver.</string>
    <string name="city">City</string>
    <string name="airport">AirPort</string>
    <string name="tccar">TCCar</string>
    <string name="all">ALL</string>
    <string name="any">Any</string>
    <string name="_4_seats_small">4 SEATS-SMALL</string>
    <string name="_5_seats">5 SEATS</string>
    <string name="_7_seats">7 SEATS</string>
    <string name="any_airport">any airport</string>
    <string name="_4_seats_airport">4 seats-airport</string>
    <string name="_7_seats_airport">7 seats-airport</string>
    <string name="_4_seats">4 seats</string>
    <string name="commencement_rate_up">Commencement rate up to </string>
    <string name="fare_of_return_trip_with_distance">fare of return trip with distance >40km</string>


</resources>
