<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/_5sdp"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback_mess"
        android:textColor="@color/teal_600"
        android:gravity="center"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        android:id="@+id/txt_mess"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:background="@color/grey_200"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingRight="@dimen/_5sdp"
        android:hint="@string/title"
        android:textSize="@dimen/_14sdp"
        android:maxLines="1"
        android:ellipsize="end"
        android:inputType="text"
        android:textColor="@color/grey_900"
        android:textColorHint="@color/grey_500"
        android:layout_below="@id/txt_mess"
        android:id="@+id/edt_feedback_title"
        android:textCursorDrawable="@drawable/custom_cursor_edittext"
        />

    <View
        android:layout_width="1dp"
        android:layout_height="@dimen/_40sdp"
        android:id="@+id/view_"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_200"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/feedback_content"
        android:textSize="@dimen/_14sdp"
        android:ellipsize="end"
        android:inputType="textMultiLine"
        android:gravity="start"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/grey_900"
        android:textColorHint="@color/grey_500"
        android:textCursorDrawable="@drawable/custom_cursor_edittext"
        android:layout_below="@id/edt_feedback_title"
        android:id="@+id/edt_feedback_content"
        android:layout_above="@id/view_"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/custom_button_activation_code"
        android:id="@+id/layout_btn_hotline"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/view_"
        android:layout_marginRight="@dimen/_5sdp"
        >
        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/ic_call"
            android:tint="@color/white"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hotline"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/_5sdp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/custom_button_register"
        android:id="@+id/layout_btn_send"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/view_"
        android:layout_marginLeft="@dimen/_5sdp"
        >
        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/ic_send"
            android:tint="@color/white"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_feedback"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/_5sdp"
            />
    </LinearLayout>
</RelativeLayout>