<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/_5sdp"
    >
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        app:civ_fill_color="@color/teal_600"
        android:src="@mipmap/ic_launcher"
        app:civ_border_color="@color/orange_800"
        app:civ_border_width="@dimen/_1sdp"
        android:layout_centerHorizontal="true"
        android:id="@+id/imv_logo"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_version"
        android:gravity="center"
        android:textColor="@color/teal_600"
        android:layout_marginTop="@dimen/_5sdp"
        android:textStyle="bold"
        android:textSize="@dimen/_14sdp"
        android:layout_below="@id/imv_logo"
        android:id="@+id/txt_app_version"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/copyright"
        android:gravity="center"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/grey_500"
        android:id="@+id/txt_copyright"
        android:layout_marginTop="@dimen/_5sdp"
        />
    <View
        android:layout_width="1dp"
        android:layout_height="@dimen/_20sdp"
        android:id="@+id/view_"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/custom_button_activation_code"
        android:id="@+id/layout_btn_rate_app"
        android:layout_toLeftOf="@id/view_"
        android:layout_marginRight="@dimen/_2sdp"
        android:layout_above="@id/txt_copyright"
        >
        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/ic_rate"
            android:tint="@color/white"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_app"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/_5sdp"
            android:textAllCaps="true"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/custom_button_register"
        android:id="@+id/layout_btn_share"
        android:layout_toRightOf="@id/view_"
        android:layout_marginLeft="@dimen/_2sdp"
        android:layout_above="@id/txt_copyright"
        >
        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/ic_facebook"
            android:tint="@color/white"
            android:padding="@dimen/_3sdp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/_5sdp"
            android:textAllCaps="true"
            />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_below="@id/txt_app_version"
        android:layout_above="@id/layout_btn_rate_app"
        android:scrollbars="none"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/content_about_us"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/grey_800"
            />
    </ScrollView>
</RelativeLayout>