<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/register_background" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/layout_border"
        android:padding="@dimen/_10sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/teal_600"
            android:text="0976678404"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_5sdp"
            android:id="@+id/txt_phone_number"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_below="@id/txt_phone_number"
            android:background="@drawable/layout_border_color"
            android:padding="@dimen/_5sdp"
            android:id="@+id/layout_edit_text"
            >
            <ImageView
                android:id="@+id/ic_verification_code"
                android:layout_width="@dimen/icon_width"
                android:layout_height="@dimen/edittext_height"
                android:src="@drawable/ic_key"
                android:tint="@color/colorPrimary"
                />

            <EditText
                android:id="@+id/edt_verification_code"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_toRightOf="@id/ic_verification_code"
                android:background="@color/transparent_100"
                android:gravity="center_vertical"
                android:hint="@string/verification_code"
                android:inputType="number"
                android:maxLines="1"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:textColorHint="@color/grey_500"
                android:textColor="@color/grey_900"
                android:textCursorDrawable="@drawable/custom_cursor_edittext" />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_edit_text"
            android:layout_marginTop="@dimen/_5sdp"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/grey_600"
            android:gravity="center"
            android:text="@string/enter_verification_code_mess"
            />
    </RelativeLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:text="@string/re_send_sms"
        android:textAllCaps="false"
        android:textSize="@dimen/_16sdp"
        android:textColor="@color/white"
        android:background="@drawable/custom_button_activation_code"
        android:layout_alignParentBottom="true"
        android:id="@+id/btn_re_send_sms"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textSize="@dimen/_16sdp"
        android:textColor="@color/white"
        android:background="@drawable/custom_button_register"
        android:layout_above="@id/btn_re_send_sms"
        android:id="@+id/btn_confirm"
        />
</RelativeLayout>